Phase-08/api-servide.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: traceroute
spec:
  type: NodePort

  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001
