Phase-08/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: traceroute
spec:
  # replicas: 3
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: repo-secret

      containers:
        - name: api
          image: ghcr.io/star-academy/summer1403-devops-team12/traceroute-api

          resources:
            limits:
              memory: "128Mi"
              cpu: "256m"

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: traceroute
spec:
  # type: LoadBalancer
  type: NodePort
  externalTrafficPolicy: Cluster

  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001
