Phase-08/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: traceroute
  labels:
    name: api-ingress
spec:
  rules:
    - host: traceroute-api.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api
                port:
                  number: 80
